test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/multiple_imports_of_same_reexport/src/lib_3_1.sw
library;

pub use ::items_3::*;

pub use ::items_3::Items3_Variants::*;
