test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/simple_item_import/src/lib_3.sw
library;

pub use ::items_3::Items3_Variants::*;
